# Aster

./: .gitignore  .gitmodules  Aster.sln  CMakeLists.txt  README.md
Aster/: Actor.cpp  Aster.vcxproj  Aster.vcxproj.filters  Asteroid.cpp  AsteroidMgr.cpp  AsteroidPool.h  Bullet.cpp  Common.h  Config.cpp  Game.cpp  Game.h  ICircleContactReport.h  Main.cpp  Physics.cpp  Physics.h  Shader.cpp  Ship.cpp  Ship.h  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  glad.c
Aster/Levels/: one.json  one.lvl
Aster/Private/: Actor.cpp  Animation.cpp  Asteroid.cpp  AsteroidMgr.cpp  AsteroidPool.cpp  Block.cpp  Bullet.cpp  Camera.cpp  Config.cpp  Files.cpp  Game.cpp  Level.cpp  Main.cpp  Physics.cpp  Player.cpp  PlayerController.cpp  Rectangle.cpp  RectangleSystem.cpp  ResourceManager.cpp  Ship.cpp  SpearPowerUp.cpp  SpikeEnemy.cpp  Sprite.cpp  SpriteRenderer.cpp  SwordPowerUp.cpp  TextRenderer.cpp
Aster/Public/: Actor.h  Animation.h  AsterTypes.h  Asteroid.h  AsteroidMgr.h  Block.h  Bullet.h  Camera.h  Common.h  Config.h  Files.h  Game.h  IPoolable.h  Level.h  Mesh.h  Physics.h  Player.h  PlayerController.h  RectangleSystem.h  ResourceManager.h  Shader.h  Ship.h  SpearPowerUp.h  SpikeEnemy.h  Sprite.h  SpriteRenderer.h  SwordPowerUp.h  TextRenderer.h  Transform.h
Aster/Textures/: attack_down.anim  attack_down.hit  attack_down.txt  attack_left.hit  attack_left.txt  attack_right.anim  attack_right.hit  attack_right.txt  attack_up.hit  attack_up.txt  player_idle.anim  player_walk.hit  player_walk.txt  roll_left.hit  spear_left.hit  sword_left.anim  sword_right.hit  sword_up.anim
Aster/Utils/: Files.h
Aster/config/: config.conf
Aster/shaders/: sprite.vs
Config/: config.conf
Levels/: one.json  one.lvl
Shaders/: shader.fs  shader.gs  sprite.fs  sprite.vs  text.vs
Source/: Animation.cpp  Animation.h  AsterTypes.h  BuildingManager.cpp  BuildingManager.h  Camera.cpp  Camera.h  Common.h  Config.cpp  Config.h  Game.cpp  Game.h  ICircleContactReport.h  Level.cpp  Level.h  Main.cpp  PhysicActor.cpp  PhysicActor.h  Physics.cpp  Physics.h  PlayerController.cpp  PlayerController.h  RectangleSystem.cpp  RectangleSystem.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  Texture2D.cpp  TileBuilder.cpp  TileBuilder.h
Source/Entity/: Actor.cpp  Actor.h  Block.cpp  Block.h  Building.cpp  Building.h  Door.cpp  Door.h  HammerPowerUp.cpp  HammerPowerUp.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  Projectile.cpp  Projectile.h  ShootyEnemy.cpp  ShootyEnemy.h  SpearPowerUp.cpp  SpearPowerUp.h  SpikeEnemy.cpp  SpikeEnemy.h  SwordPowerUp.cpp  SwordPowerUp.h
Source/Entity/Enemy/: Enemy.cpp  Enemy.h  ShootyEnemy.cpp  ShootyEnemy.h  SpikeEnemy.cpp  SpikeEnemy.h
Textures/: hammer_left.anim  hammer_left.hit  hammer_right.anim  hammer_right.hit  player_idle.anim  player_idle.hit  player_walk.anim  roll_down.anim  roll_left.anim  roll_right.anim  roll_up.anim  roll_up.hit  shooty_arrow_fire.anim  shooty_enemy_idle_down.anim  shooty_enemy_idle_left.anim  shooty_enemy_idle_right.anim  shooty_enemy_idle_up.anim  shooty_enemy_shoot_down.anim  shooty_enemy_shoot_left.anim  shooty_enemy_shoot_right.anim  shooty_enemy_shoot_up.anim  spear_down.anim  spear_down.hit  spear_left.anim  spear_left.hit  spear_right.anim  spear_right.hit  spear_up.anim  spear_up.hit  spike_enemy_idle.anim  sword_down.anim  sword_down.hit  sword_left.anim  sword_left.hit  sword_right.anim  sword_right.hit  sword_up.anim  sword_up.hit
utils/: files.cpp  files.hpp
